--- a/lab1.html
+++ b/lab1.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>             
+<html lang="en">
 
+<head>
+<meta charset="UTF-8">
+<title>VlaDICK VodopaDICK</title>
+<style>body
+            {
+            color:black;
+            background: #efef02;
+            }
+</style>
+            </head>
+
+<body>
+<h1 ><b><center>CSS</center></b></h1>
+<hr>
+<div>
+<p style="position: relative;Left:3%; right:3%; width: 94%;"><b>CSS </b>(англ./ Cascading Style Sheets, укр. Каскадні таблиці стилів) — це спеціальна мова стилю сторінок[en], що використовується для опису їхнього зовнішнього вигляду. Самі ж сторінки написані мовами розмітки даних.
+    CSS є основною технологією всесвітньої павутини, поряд із HTML та JavaScript[1].
+<br> <br>
+    Найчастіше CSS використовують для візуальної презентації сторінок, написаних HTML та XHTML, але формат CSS може застосовуватися до інших видів XML-документів.
+    Специфікації CSS були створені та розвиваються Консорціумом Всесвітньої мережі.
+<br> <br>
+    CSS має різні рівні та профілі. Наступний рівень CSS створюється на основі попередніх, додаючи нову функціональність або розширюючи вже наявні функції. Рівні позначаються як CSS1, CSS2 та CSS3. Профілі — сукупність правил CSS одного або більше рівнів, створені для окремих типів пристроїв або інтерфейсів. Наприклад, існують профілі CSS для принтерів, мобільних пристроїв тощо.
+    <br> <br>
+    CSS (каскадна або блочна верстка) прийшла на заміну табличній верстці вебсторінок. Головна перевага блочної верстки — розділення змісту сторінки (даних) та їхньої візуальної презентації.</p> <dr>
+
+        <center> <img src= https://itproger.com/img/courses/1476977488.jpg alt="CSS" width="400"> </center>
+
+    </div> 
+<center><div> 
+<a href="https://css.in.ua/css/properties">
+    <b>Вебдовідник CSS</b>
+</a></div>
+<div>
+<a href="https://html-css.co.ua/dovidnuk-css-atrubytiv/">
+    <b>Довідник CSS атрибутів</b>
+</a></div>
+<a href="https://www.w3.org/Style/CSS/specs.uk.html">
+    <b>Описи всіх специфікацій CSS</b>
+</a></div>
+<div>
+<a href="https://www.w3schools.com/css/default.asp">
+    <b>CSS Tutorial</b>
+</a></div>
+</center>
+
+</body>
+
+</html>
